<resources>
    <string name="app_name">LiveScore</string>
    <string name="show_matches">Show matches</string>
    <string name="saved_matches">Saved Matches</string>
    <string name="away_team_crest">Away team crest</string>
    <string name="home_team_crest">Home team crest</string>
    <string name="filter_matches">Show matches by date</string>
    <string name="set_from_date">Set from date</string>
    <string name="set_to_date">Set to date</string>
    <string name="show_results">Show results</string>
    <string name="dismiss">Dismiss</string>
    <string name="save_report">Save report</string>
    <string name="modify">Modify</string>
    <string name="sign_in">Sign in</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_pass">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="about_the_author">About the author</string>
    <string name="title_activity_maps">Map</string>
</resources>
